# KubeTrainer

./: Dockerfile.wrapper  README.md
bash_scripts/: rocm_install.sh
gpu-detect/: Dockerfile
infra_training/: Dockerfile  amdgpu-install_7.0.2.70002-1_all.deb.1  entrypoint.sh  infra_learning.py  interact.py  k8s_training_integration.py  sre_rag_finetuning.py  walkthrough.md
infra_training/rag_vectors/: vectors.faiss
infra_training/training_data/: daemonsets_training_data.jsonl  deployments_training_data.jsonl  events_training_data.jsonl  jobs_training_data.jsonl  nodes_training_data.jsonl  pods_training_data.jsonl  services_training_data.jsonl
k8s-data-collector/: Cargo.toml  Dockerfile.agent  agent-entrypoint.sh  exporters.rs
k8s-data-collector/src/: collectors.rs  exporters.rs  main.rs  models.rs
k8s-data-collector/training_data/: daemonsets_training_data.jsonl  deployments_training_data.jsonl  jobs_training_data.jsonl  nodes_training_data.jsonl  pods_training_data.jsonl  services_training_data.jsonl  storageclasses_training_data.jsonl  synthetic_training_data.jsonl
